# halloworld-plasmoid

./: .gitignore  CMakeLists.txt  README.md  readme.md
plasmoid/: metadata.desktop
plasmoid/contents/ui/: main.qml
src/: CMakeLists.txt  helloworld.cpp  helloworld.h  plugin.cpp  plugin.h  qmldir
